--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
         <meta charset="utf-8">
         <title>Minha página</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
     <body>
+            <i class="fas fa-briefcase"></i>
+            <div class="container">
+                    <div class="row">
+                      <div class="col-sm">
+                        Primeira Coluna
+                      </div>
+                      <div class="col-sm">
+                        Segunda Coluna
+                      </div>
+                      <div class="col-sm">
+                        Terceira Coluna
+                      </div>
+                    </div>
+                  </div>              
+            
         <h1>Hello, world</h1>
         <div class="box">
             <p>JS Ladies RJ</p>
@@ -27,7 +45,26 @@
     <h2>Estudante</h2>
 
     <p>Brasileira, solteira, 44 anos - Rio de Janeiro - RJ<p>
-    <a href="http://fb.com">Facebook</a> - <a href="http://github.com/lucominato">Github</a> - <a href="http://twitter.com">Twitter</a>
+
+            <div class="container">
+                    <div class="row">
+                      <div class="col-xs-6 col-sm-3">
+                        <a href="https://www.facebook.com/" target="_blank">
+                            <i class="fab fa-facebook"></i></a>
+                      </div>
+                      <div class="col-xs-6 col-sm-3">
+                          <a href="https://www.google.com/" target="_blank">
+                            <i class="fab fa-google"></i></a>
+                      </div>
+                      <div class="col-xs-6 col-sm-3">
+                        <a href="https://www.twitter.com/" target="_blank">
+                            <i class="fab fa-twitter-square"></i></a>
+                      </div>
+                      <div class="col-xs-6 col-sm-3">
+                        <a href="https://www.github.com/" target="_blank">
+                            <i class="fab fa-github"></i></a>
+                      </div>
+                    </div>
 
     <div class="content">
     <p><b>Email:</b> lucianacominato@gmail.com</p>
