--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </head>
     <body>
-
-<div class="bio center">
+      
+      <div class="bio center">
           <img class="avatar center" src="http://vidadiaria.com.br/images/2017/educacao/agosto/estudante3.jpg">
-    <h1>Luciana Cominato Rocha</h1>
-    <h2>Estudante</h2>
+          <h1>Luciana Cominato Rocha</h1>
+          <h2>Estudante</h2>
 
-    <p>Brasileira, solteira, 44 anos - Rio de Janeiro - RJ<p>
+          <p>Brasileira, solteira, 44 anos - Rio de Janeiro - RJ<p>
 
-            <div class="container">
+               <div class="container">
                     <div class="row">
                       <div class="col-xs-6 col-sm-3">
                         <a href="https://www.facebook.com/" target="_blank">
@@ -36,30 +36,31 @@
                         <a href="https://www.github.com/" target="_blank">
                             <i class="fab fa-github"></i></a>
                       </div>
-                    </div>
+               </div>
 
-    <div class="content">
-    <p><b>Email:</b> lucianacominato@gmail.com</p>
-    <p><b>Phone:</b> (+55)21-980338558</p>
+          <div class="content">
+          <p><b>Email:</b> lucianacominato@gmail.com</p>
+          <p><b>Phone:</b> (+55)21-980338558</p>
 
-    <h3>Experiência</h3>
-    <p><i>2013/06 ~ Atual</i> Compra e venda de cartas no Magic Online</p>
+          <h3>Experiência</h3>
+          <p><i>2013/06 ~ Atual</i> Compra e venda de cartas no Magic Online</p>
 
-    <h3>Educação</h3>
-    <p> Superior incompleto em Engenharia - PUC-RJ turma 93/1 </p>
-    <p> Superior incompleto em Medicina = UFRJ turma 2000/2 </p>
+          <h3>Educação</h3>
+          <p> Superior incompleto em Engenharia - PUC-RJ turma 93/1 </p>
+          <p> Superior incompleto em Medicina = UFRJ turma 2000/2 </p>
 
-    <h3>Habilidades</h3>
-    <ul>
-      <li>HTML5 / CSS3</li>
-      <li>Fazer café</li>
-      <li>Fazer strogonoff</li>
-    </ul>
+          <h3>Habilidades</h3>
+          <ul>
+             <li>HTML5 / CSS3</li>
+             <li>Fazer café</li>
+             <li>Fazer strogonoff</li>
+          </ul>
 
-    <h3>Interesses<h3>
-    <ul>
-      <li>Jogar Magic the Gathering,videogame </li>
-    </ul>
+          <h3>Interesses<h3>
+          <ul>
+             <li>Jogar Magic the Gathering,videogame </li>
+          </ul>
+       </div>
     </div>
-</div>
     </body>
+</html>
