--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
           <p> Superior incompleto em Medicina = UFRJ turma 2000/2 </p>
 
           <h3>Habilidades</h3>
-          <ul>
+          <ul class="habilidades">
              <li>HTML5 / CSS3</li>
              <li>Fazer café</li>
              <li>Fazer strogonoff</li>
           </ul>
 
           <h3>Interesses<h3>
-          <ul>
+          <ul class="interesses">
              <li>Jogar Magic the Gathering,videogame </li>
+             <li>Apertar doguinhos</li>
           </ul>
        </div>
     </div>
