--- a/HZC/Index.html
+++ b/HZC/Index.html
@@ -29,17 +29,106 @@
   </nav>
   <main class="principal">
     <h2 class="titulo-pagina">Titulo</h2>
-    <article class="cartao">
+    <article class="cartao cartao--destaque">
       <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
       <div class="cartao__conteudo">
         <p class="cartao__destaque">Vídeo em destaque</p>
         <h3 class="cartao__titulo">HZC - Título</h3>
-        <p class="cartao__perfil">Bruno Lopez</p>
+        <p class="cartao__perfil">Bruno Lopes</p>
         <p class="cartao__info cartao__info--tempo">33 minutos</p>
-        <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+        <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
         <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
       </div>
     </article>  
+    <section class="secao">
+      <h3 class="titulo-secao">Vídeos mais vistos</h3>
+      <article class="cartao">
+      <img src="assets/img/video_1.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">André Soares</p>
+          <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+        <img src="assets/img/video_2.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <h3 class="cartao__titulo">HZC - Enter the Hu-Flex</h3>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+        </div>
+      </article> 
+      <article class="cartao">
+      <img src="assets/img/video_3.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Luíza Sampaio</p>
+          <h3 class="cartao__titulo">HZC - Vol.3</h3>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+      <img src="assets/img/video_4.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <h3 class="cartao__titulo">HZC - Love Machine</h3>
+          <p class="cartao__info cartao__info--tempo">33 minutos</p>
+          <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+    </section>
+    <article class="cartao cartao--destaque">
+      <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem">
+      <div class="cartao__conteudo">
+        <p class="cartao__destaque">Nova arte</p>
+        <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+        <p class="cartao__perfil">Bruno Lopes</p>
+        <p class="cartao__info cartao__info--moeda">33.33</p>
+        <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+        <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar agora</button>
+      </div>
+    </article>  
+    <section class="secao">
+      <h3 class="titulo-secao">Camisas mais recentes</h3>
+      <article class="cartao">
+      <img src="assets/img/produto_1.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">André Soares</p>
+          <h3 class="cartao__titulo">HZC</h3>
+          <p class="cartao__info cartao__info--moeda">33.33</p>
+          <button class="cartao__botao cartao__botao--carrinho" aria-label="Comprar agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+        <img src="assets/img/produto_2.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+          <p class="cartao__info cartao__info--moeda">33.33</p>
+          <button class="cartao__botao cartao__botao--carrinho" aria-label="Comprar agora"></button>
+        </div>
+      </article> 
+      <article class="cartao">
+      <img src="assets/img/produto_3.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Luíza Sampaio</p>
+          <h3 class="cartao__titulo">Corujita noturna</h3>
+          <p class="cartao__info cartao__info--moeda">33.33</p>
+          <button class="cartao__botao cartao__botao--carrinho" aria-label="Comprar agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+      <img src="assets/img/produto_4.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+          <p class="cartao__info cartao__info--moeda">33.33</p>
+          <button class="cartao__botao cartao__botao--carrinho" aria-label="Comprar agora"></button>
+        </div>
+      </article>
+    </section>
   </main>
   <script src="index.js"></script>
 </body>
