--- a/HZC/Index.html
+++ b/HZC/Index.html
@@ -16,6 +16,7 @@
   <header class="cabecalho">
     <button class="cabecalho__menu" area-label="Menu"><i></i></button>
     <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+    <p class="cabecalho__perfil">Bruno Lopes</p>
     <button class="cabecalho__notificacao" area-label="Notificação"><i></i></button>
   </header>
   <nav class="menu-lateral">
@@ -29,8 +30,9 @@
   </nav>
   <main class="principal">
     <h2 class="titulo-pagina">Titulo</h2>
-    <article class="cartao cartao--destaque">
-      <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+    <article class="cartao cartao--destaque destaque-video">
+      <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem imagem-mobile">
+      <img src="assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem imagem-desktop"> 
       <div class="cartao__conteudo">
         <p class="cartao__destaque">Vídeo em destaque</p>
         <h3 class="cartao__titulo">HZC - Título</h3>
@@ -40,7 +42,38 @@
         <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
       </div>
     </article>  
-    <section class="secao">
+    <article class="cartao cartao--recentes videos-recentes">
+      <h3 class="cartao__titulo">Vídeos recentes</h3>
+      <a href="a" class="cartao__link">Ver todos</a>
+      <ul class="cartao__lista">
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_2.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_3.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_4.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_5.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+      </ul>
+    </article>
+    <section class="secao secao-videos">
       <h3 class="titulo-secao">Vídeos mais vistos</h3>
       <article class="cartao">
       <img src="assets/img/video_1.png" alt="video" class="cartao__imagem">
@@ -79,8 +112,50 @@
         </div>
       </article>
     </section>
-    <article class="cartao cartao--destaque">
-      <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem">
+    <article class="cartao cartao--recentes produtos-recentes">
+      <h3 class="cartao__titulo">Artes recentes</h3>
+      <a href="a" class="cartao__link">Ver todos</a>
+      <ul class="cartao__lista">
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_2.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li> 
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_2.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_3.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_4.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_5.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+      </ul>
+    </article>
+    <article class="cartao cartao--destaque destaque-produtos">
+      <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem imagem-mobile">
+      <img src="assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem imagem-desktop">
       <div class="cartao__conteudo">
         <p class="cartao__destaque">Nova arte</p>
         <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
@@ -90,7 +165,7 @@
         <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar agora</button>
       </div>
     </article>  
-    <section class="secao">
+    <section class="secao secao-produtos">
       <h3 class="titulo-secao">Camisas mais recentes</h3>
       <article class="cartao">
       <img src="assets/img/produto_1.png" alt="video" class="cartao__imagem">
