--- a/HZC/Picos.html
+++ b/HZC/Picos.html
@@ -16,6 +16,7 @@
   <header class="cabecalho">
     <button class="cabecalho__menu" area-label="Menu"><i></i></button>
     <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+    <p class="cabecalho__perfil">Bruno Lopes</p>
     <button class="cabecalho__notificacao" area-label="Notificação"><i></i></button>
   </header>
   <nav class="menu-lateral">
@@ -27,6 +28,87 @@
     <a href="Camisas.html" class="menu-lateral__link menu-lateral__link--camisas">Camisas</a>
     <a href="Pinturas.html" class="menu-lateral__link menu-lateral__link--pinturas">Pinturas</a>
   </nav>
+  <main class="principal">
+    <h2 class="titulo-pagina">Picos</h2>
+    <article class="cartao cartao--destaque destaque-video">
+      <img src="assets/img/artigo_2.png" alt="Banner do cartão" class="cartao__imagem imagem-mobile">
+      <img src="assets/img/mapa-picos.png" alt="Banner do cartão" class="cartao__imagem imagem-desktop"> 
+    </article>
+    <article class="cartao cartao--recentes videos-recentes">
+      <h3 class="cartao__titulo">Favoritos</h3>
+      <a href="a" class="cartao__link">Ver todos</a>
+      <ul class="cartao__lista">
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_1.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Wallride da FGP</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_2.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Gap do Itaú</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_3.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Gap com mureta</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_4.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Segundo setor da Praça Mauá</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_5.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Borda de valores</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+        <li class="cartao__item">
+          <img src="assets/img/miniatura_4.png" alt="thumbnail" class="cartao__item--thumbnail">
+          <h4 class="cartao__item-titulo">Wallride do Rebouças</h4>
+          <p class="cartao__item-perfil">Bruno Lopes</p>
+        </li>
+      </ul>
+    </article>
+    <section class="secao secao-videos">
+      <h3 class="titulo-secao">Vídeos mais vistos</h3>
+      <article class="cartao">
+      <img src="assets/img/video_1.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Bruno Lopes</p>
+          <h3 class="cartao__titulo">Gap do Itaú da Voluntários da Pátria</h3>
+          <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+          <button class="cartao__botao cartao__botao--pico" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+        <img src="assets/img/video_2.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Luíza Sampaio</p>
+          <h3 class="cartao__titulo">Gap com mureta da Voluntários</h3>
+          <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+          <button class="cartao__botao cartao__botao--pico" aria-label="Assistir agora"></button>
+        </div>
+      </article> 
+      <article class="cartao">
+      <img src="assets/img/video_3.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">André Soares</p>
+          <h3 class="cartao__titulo">Rampa da entrada do túnel Rebouças</h3>
+          <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+          <button class="cartao__botao cartao__botao--pico" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+      <article class="cartao">
+      <img src="assets/img/video_4.png" alt="video" class="cartao__imagem">
+        <div class="cartao__conteudo">
+          <p class="cartao__perfil">Júlia Fonseca</p>
+          <h3 class="cartao__titulo">Wallride de pedra portuguesa da FGP</h3>
+          <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+          <button class="cartao__botao cartao__botao--pico" aria-label="Assistir agora"></button>
+        </div>
+      </article>
+    </section>
   <script src="index.js"></script>
 </body>
 </html>
