--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <a href="./index.html" class="menu-lateral__link">Inicio</a>
           <a href="./barbeariaAlura/index.html" class="menu-lateral__link">BarbeariaAlura</a>
-          <a href="./HZC/index.html" class="menu-lateral__link">HZC</a>
+          <a href="./HZC/Index.html" class="menu-lateral__link">HZC</a>
           <a href="./aluraplus/index.html" class="menu-lateral__link">Alura plus</a>
         </nav>
       </header>
